{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 18,
  "lineage": "f5c4c8cf-9db4-7170-cff0-19bedb0f15e4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-00fc8fcf6354b41a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.128.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc8fcf6354b41a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public-eu-west-1a",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ec2a5ff1be0688fa",
            "arn": "arn:aws:ec2:eu-west-1:065035877672:instance/i-0b1606fedc56028af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1606fedc56028af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-099dfd63f077acc1f"
              }
            ],
            "primary_network_interface_id": "eni-099dfd63f077acc1f",
            "private_dns": "ip-10-0-128-135.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.135",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9608559b5003d48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fc8fcf6354b41a7",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "vpc_security_group_ids": [
              "sg-0d70b52e739be2d89",
              "sg-0ecc6a3bd6efad27e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "i-0b1606fedc56028af",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2.data.aws_partition.current",
            "module.ec2.data.aws_ssm_parameter.this",
            "module.ec2.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group/sg-0ecc6a3bd6efad27e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ecc6a3bd6efad27e",
            "ingress": [],
            "name": "12-public-modules-20260408140321035700000003",
            "name_prefix": "12-public-modules-",
            "owner_id": "065035877672",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "sg-0ecc6a3bd6efad27e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.ec2.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group-rule/sgr-02f6588c3fead8245",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-02f6588c3fead8245",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0ecc6a3bd6efad27e",
            "security_group_rule_id": "sgr-02f6588c3fead8245",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-ipv4_default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-ipv4_default",
              "Project": "12-public-modules"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "sgr-02f6588c3fead8245",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group-rule/sgr-04a57182374f6f540",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-04a57182374f6f540",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0ecc6a3bd6efad27e",
            "security_group_rule_id": "sgr-04a57182374f6f540",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-ipv6_default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-ipv6_default",
              "Project": "12-public-modules"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "sgr-04a57182374f6f540",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:network-acl/acl-020934aa1e35ea157",
            "default_network_acl_id": "acl-020934aa1e35ea157",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-020934aa1e35ea157",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "065035877672",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-00fc8fcf6354b41a7"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:route-table/rtb-08d4cd50667d810da",
            "default_route_table_id": "rtb-08d4cd50667d810da",
            "id": "rtb-08d4cd50667d810da",
            "owner_id": "065035877672",
            "propagating_vgws": null,
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:security-group/sg-0d70b52e739be2d89",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d70b52e739be2d89",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "065035877672",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-default",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:internet-gateway/igw-02e1f41ce076dd614",
            "id": "igw-02e1f41ce076dd614",
            "owner_id": "065035877672",
            "region": "eu-west-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e1f41ce076dd614",
            "id": "r-rtb-0c5bb2c87209960521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c5bb2c8720996052",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0c5bb2c8720996052"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:route-table/rtb-00320e73a384cb104",
            "id": "rtb-00320e73a384cb104",
            "owner_id": "065035877672",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-eu-west-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-eu-west-1a",
              "Project": "12-public-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "rtb-00320e73a384cb104",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:route-table/rtb-0c5bb2c8720996052",
            "id": "rtb-0c5bb2c8720996052",
            "owner_id": "065035877672",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public",
              "Project": "12-public-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-00290555263411ab5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "rtb-0c5bb2c8720996052",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea5629311965edf9",
            "region": "eu-west-1",
            "route_table_id": "rtb-00320e73a384cb104",
            "subnet_id": "subnet-0d321b3f22a94a2d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ce53a7ce5b4288",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c5bb2c8720996052",
            "subnet_id": "subnet-00fc8fcf6354b41a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-0d321b3f22a94a2d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d321b3f22a94a2d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-eu-west-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-private-eu-west-1a",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "subnet-0d321b3f22a94a2d0",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:subnet/subnet-00fc8fcf6354b41a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fc8fcf6354b41a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065035877672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public-eu-west-1a",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules-public-eu-west-1a",
              "Project": "12-public-modules"
            },
            "vpc_id": "vpc-00290555263411ab5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "subnet-00fc8fcf6354b41a7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:065035877672:vpc/vpc-00290555263411ab5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-020934aa1e35ea157",
            "default_route_table_id": "rtb-08d4cd50667d810da",
            "default_security_group_id": "sg-0d70b52e739be2d89",
            "dhcp_options_id": "dopt-0c64b63a0c4bb7603",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00290555263411ab5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d4cd50667d810da",
            "owner_id": "065035877672",
            "region": "eu-west-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "12-public-modules",
              "Project": "12-public-modules"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "065035877672",
            "id": "vpc-00290555263411ab5",
            "region": "eu-west-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}